<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Babel Translate2u</string>

    <!-- Menu Strings -->
    <string name="action_settings">Settings</string>
    <string name="action_rateapp">Rate App</string>
    <string name="action_refresh">Refresh</string>

    <!-- Navigation Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Login</item>
        <item>Profile</item>
        <item>Translate</item>
        <item>Conference</item>
        <item>Avatar</item>
        <item>Babel2u Coins</item>
        <item>Exit</item>
    </string-array>

    <!-- List Item Icons(Images) with strings(text of company name) -->
    <!-- Keep them with titles array accordingly -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_login</item>
        <item>@drawable/ic_profile</item>
        <item>@drawable/ic_translatetou</item>
        <item>@drawable/ic_conference</item>
        <item>@drawable/bt_upload</item>
        <item>@drawable/ic_payment</item>
        <item>@drawable/ic_exit</item>
    </array>

    <!-- drawer_list_item Imageview Description -->
    <string name="description_list_icon">Item Icon</string>
    <string name="email">Email</string>
    <string name="passwd">Password</string>
    <string name="eula">EULA</string>
    <string name="signin">Signin or register</string>
    <string name="name">Name</string>
    <string name="user">User</string>
    <string name="translator">Translator</string>
    <string name="birth">Birthday</string>
    <string name="paypall_acc">Paypall Account</string>
    <string name="proficiency">Proficiency</string>
    <string name="save">Save</string>
    <string name="credits">Credits 3,5h</string>
    <string name="babel">Babel Translate2u</string>
    <string name="countries_fragment">countries_fragment</string>
    <string name="france">France</string>
    <string name="brasil">Brazil</string>
    <string name="alemanha">Germany</string>
    <string name="eua">Eua</string>

    <string-array name="service_array">
        <item>Other</item>
        <item>Health</item>
        <item>Security</item>
        <item>Tourism</item>
        <item>Shop</item>
    </string-array>

    <string name="title_activity_fragment_upload">FragmentUpload</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_in_call">InCallActivity</string>
    <string name="title_activity_em_chamada">EmChamada</string>
    <string name="title_activity_incall">IncallActivity</string>
    <string name="keep_connected">KEEP CONNECTED</string>

</resources>